log
Wed, Apr 16, 2025  9:17:05 AM: 
 hashmap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:50:9: error: unused variable 'tamanoNuevo' [-Werror=unused-variable]
     int tamanoNuevo = 0;
         ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  9:17:17 AM: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
a704406
Wed, Apr 16, 2025  9:18:56 AM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9c9806d
Wed, Apr 16, 2025  9:19:51 AM: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  0|6
total_score: 0/70
4a8b65f
Wed, Apr 16, 2025  9:23:06 AM: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  0|0
e7da4ad
Wed, Apr 16, 2025  9:24:59 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0fba43d
Wed, Apr 16, 2025  9:29:09 AM: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a28f901
Wed, Apr 16, 2025  9:39:43 AM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1058275
Wed, Apr 16, 2025  9:40:31 AM: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:82:25: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         map->buckets[k] = map;
                         ^
cc1.exe: all warnings being treated as errors
303ea37
Wed, Apr 16, 2025  9:41:05 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
cc13dbd
Wed, Apr 16, 2025  9:41:27 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
85f12a4
Wed, Apr 16, 2025  9:44:02 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c115180
Wed, Apr 16, 2025  9:47:59 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bb5e74f
Wed, Apr 16, 2025  9:48:36 AM: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:45:10: error: unused variable 'pos1' [-Werror=unused-variable]
     long pos1 = hash(key, map->capacity);
          ^~~~
cc1.exe: all warnings being treated as errors
bb693da
